--- a/Group-Chat/pom.xml
+++ b/Group-Chat/pom.xml
@@ -7,6 +7,13 @@
     <groupId>org.example</groupId>
     <artifactId>Group-Chat</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <modules>
+        <module>Client1</module>
+        <module>Client1</module>
+        <module>Client2</module>
+        <module>Server</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
